// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar test case1 for circle 1`] = `
<span
  style="box-sizing: border-box; width: 40px; height: 40px; margin: 0px; padding: 0px; list-style: none; position: relative; display: inline-flex; overflow: hidden; background: rgb(204, 204, 204); border-radius: 100%;"
>
   
  <img
    src="https://avatars.githubusercontent.com/u/111177624?v=4"
  />
</span>
`;

exports[`Avatar test case1 for square 1`] = `
<span
  style="box-sizing: border-box; width: 40px; height: 40px; margin: 0px; padding: 0px; list-style: none; position: relative; display: inline-flex; overflow: hidden; background: rgb(204, 204, 204); border-radius: 20%;"
>
   
  <img
    src="https://avatars.githubusercontent.com/u/111177624?v=4"
  />
</span>
`;
